turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:20: error: not found: value L
	if (rule(pos)==`L`) {gauche()}
                       ^